<resources>
    <string name="app_name">APP USer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login_to_continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sing_in">SIGN IN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sing_up">SIGN UP</string>
</resources>