<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:clipToPadding="false"
    tools:context=".SingUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_20sdp"/>

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <ImageView
                android:layout_height="@dimen/_80sdp"
                android:layout_width="@dimen/_80sdp"
                android:id="@+id/imageProfile"
                app:riv_oval="true"
                android:scaleType="centerCrop"
                android:background="@drawable/background_image"
                />
            <TextView
                android:id="@+id/addImageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                android:layout_gravity="center"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/secondary_text"/>
        </FrameLayout>
        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="Name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16ssp"
            android:textSize="@dimen/_16sdp"
            android:background="@drawable/backgroung_input"
            android:textColor="@color/primary_text"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/inputEmailS"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16ssp"
            android:textSize="@dimen/_16sdp"
            android:background="@drawable/backgroung_input"
            android:textColor="@color/primary_text"
            />

        <EditText
            android:id="@+id/inputPasssword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16ssp"
            android:textSize="@dimen/_16sdp"
            android:background="@drawable/backgroung_input"
            android:textColor="@color/primary_text"

            />
        <EditText
            android:id="@+id/inputConfirmPasssword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16ssp"
            android:textSize="@dimen/_16sdp"
            android:background="@drawable/backgroung_input"
            android:textColor="@color/primary_text"

            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:layout_marginTop="@dimen/_16sdp">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSingUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/sing_up"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_8sdp"
                android:textStyle="bold"
                />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"
                />
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/singIntxt"
            android:text="@string/sing_in"
            android:layout_marginTop="@dimen/_10sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_13sdp"
            android:clickable="true"/>

    </LinearLayout>

</ScrollView>